@@ -213,5 +213,8 @@ enum DECODER {
 #if INTERNAL_DECODER_FLIC
     TRA_FLIC,
 #endif
+#if INTERNAL_DECODER_V210_V410
+    TRA_V210_V410,
+#endif
     TRA_LAST
 };
