@@ -33,6 +33,7 @@ next version - not released yet
 + Ticket #4345, Text subtitles: Add a mode that automatically chooses the rendering target based on the
   subtitle type, ASS/SSA subtitles will be rendered on the video frame while other text subtitles will
   be rendered on the full window
++ Ticket #4690, Internal filters: Support v210/v410 raw video formats
 * Text subtitles: Faster subtitle parsing (up to 4 times faster for ASS/SSA subtitles)
 * Text subtitles: Improved subtitle renderer for faster rendering of complex subtitle scripts (often twice faster or more)
 * Text subtitles: Much faster subtitle opening in the Subresync bar
